--- a/notebooks/Super_Resolution.ipynb
+++ b/notebooks/Super_Resolution.ipynb
@@ -43,10 +43,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "ODrgJnd9tAL6",
-        "outputId": "433b3a80-a760-420d-f602-dd60a7aa408b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "433b3a80-a760-420d-f602-dd60a7aa408b"
       },
       "outputs": [
         {
@@ -88,12 +88,12 @@
         "!pip install --upgrade torchvision\n"
       ],
       "metadata": {
-        "id": "h_CMEMxvcmNM",
-        "outputId": "cb19a373-27c1-4953-e074-9a04d6789e2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "h_CMEMxvcmNM",
+        "outputId": "cb19a373-27c1-4953-e074-9a04d6789e2c"
       },
       "execution_count": 4,
       "outputs": [
@@ -193,11 +193,11 @@
         "cd isr"
       ],
       "metadata": {
-        "id": "2E1VbX96fN_Z",
-        "outputId": "20a2da81-6109-49cb-9f6c-256fb84e6e1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2E1VbX96fN_Z",
+        "outputId": "20a2da81-6109-49cb-9f6c-256fb84e6e1e"
       },
       "execution_count": 7,
       "outputs": [
@@ -216,11 +216,11 @@
         "!ls"
       ],
       "metadata": {
-        "id": "l7O5VbuGfetA",
-        "outputId": "a7df28be-bb94-4486-b171-742294b0f909",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l7O5VbuGfetA",
+        "outputId": "a7df28be-bb94-4486-b171-742294b0f909"
       },
       "execution_count": 12,
       "outputs": [
@@ -368,11 +368,8 @@
         "    run_btn.click(inference, [input_image, task, model_name, scale], [output_image])\n",
         "    task.change(on_task_change, [task], [model_name])\n",
         "\n",
-        "# def greet(name):\n",
-        "#     return f\"Hello, {name}!\"\n",
-        "# demo = gr.Interface(fn=greet, inputs=\"text\", outputs=\"text\")\n",
         "\n",
-        "# demo.queue().launch(share=True)\n"
+        "demo.queue().launch(share=True)\n"
       ]
     }
   ],
