--- a/notebooks/Super_Resolution.ipynb
+++ b/notebooks/Super_Resolution.ipynb
@@ -236,6 +236,45 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "file_path = '/usr/local/lib/python3.11/dist-packages/basicsr/data/degradations.py'\n",
+        "\n",
+        "# Read the file content\n",
+        "with open(file_path, 'r') as file:\n",
+        "    lines = file.readlines()\n",
+        "\n",
+        "# Modify the import statement\n",
+        "for i in range(len(lines)):\n",
+        "    if \"from torchvision.transforms.functional_tensor import rgb_to_grayscale\" in lines[i]:\n",
+        "        lines[i] = lines[i].replace(\"from torchvision.transforms.functional_tensor import rgb_to_grayscale\",\n",
+        "                                    \"from torchvision.transforms.functional import rgb_to_grayscale\")\n",
+        "\n",
+        "# Write the changes back to the file\n",
+        "with open(file_path, 'w') as file:\n",
+        "    file.writelines(lines)\n",
+        "\n",
+        "print(f\"Updated the import statement in {file_path}\")\n"
+      ],
+      "metadata": {
+        "id": "4koc1x9Nmr2O",
+        "outputId": "6250848e-f554-4a97-c2c3-84ea9e76b091",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Updated the import statement in /usr/local/lib/python3.11/dist-packages/basicsr/data/degradations.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 19,
       "metadata": {
         "id": "grBrjCAHtHiB"
@@ -371,6 +410,83 @@
         "\n",
         "demo.queue().launch(share=True)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import cv2\n",
+        "import numpy as np\n",
+        "from isr.utils import get_upsampler, get_face_enhancer\n",
+        "from google.colab import files\n",
+        "from IPython.display import Image, display\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "def inference(img, task, model_name, scale):\n",
+        "    if scale > 4:\n",
+        "        scale = 4  # avoid too large scale value\n",
+        "    try:\n",
+        "        img = cv2.imread(img, cv2.IMREAD_UNCHANGED)\n",
+        "\n",
+        "        h, w = img.shape[0:2]\n",
+        "        if h > 3500 or w > 3500:\n",
+        "            raise Exception(f\"image too large: {w} * {h}\")\n",
+        "\n",
+        "        if (h < 300 and w < 300) and model_name != \"srcnn\":\n",
+        "            img = cv2.resize(img, (w * 2, h * 2), interpolation=cv2.INTER_LANCZOS4)\n",
+        "            return cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "        if task == \"face\":\n",
+        "            upsample_model_name = \"realesr-general-x4v3\"\n",
+        "        else:\n",
+        "            upsample_model_name = model_name\n",
+        "        upsampler = get_upsampler(upsample_model_name)\n",
+        "\n",
+        "        if task == \"face\":\n",
+        "            face_enhancer = get_face_enhancer(model_name, scale, upsampler)\n",
+        "        else:\n",
+        "            face_enhancer = None\n",
+        "\n",
+        "        try:\n",
+        "            if face_enhancer is not None:\n",
+        "                _, _, output = face_enhancer.enhance(\n",
+        "                    img, has_aligned=False, only_center_face=False, paste_back=True\n",
+        "                )\n",
+        "            else:\n",
+        "                output, _ = upsampler.enhance(img, outscale=scale)\n",
+        "        except RuntimeError as error:\n",
+        "            raise Exception(error)\n",
+        "\n",
+        "        output = cv2.cvtColor(output, cv2.COLOR_BGR2RGB)\n",
+        "        return output\n",
+        "    except Exception as error:\n",
+        "        raise Exception(f\"global exception: {error}\")\n",
+        "\n",
+        "\n",
+        "# File upload functionality for Colab\n",
+        "uploaded = files.upload()\n",
+        "\n",
+        "# Assuming the user uploads an image, we can load it\n",
+        "img_path = next(iter(uploaded))  # Get the first uploaded image path\n",
+        "\n",
+        "# Example settings (replace with user inputs in a real scenario)\n",
+        "task = \"general\"\n",
+        "model_name = \"realesr-general-x4v3\"\n",
+        "scale = 20\n",
+        "\n",
+        "# Perform inference\n",
+        "output_image = inference(img_path, task, model_name, scale)\n",
+        "\n",
+        "# Display the result\n",
+        "plt.imshow(output_image)\n",
+        "plt.axis('off')  # Hide axes\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "NKQRxCoYmxt4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
